<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="@dimen/space16dp"
    android:orientation="vertical"
    tools:context=".activities.NewBlockActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/space5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/space30dp"
            android:textStyle="bold"
            android:textSize="@dimen/size16sp"
            android:text="@string/new_message"/>
        <EditText
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:hint="@string/new_message_hint"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/newBlockData"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/size16sp"
            android:layout_marginTop="@dimen/space20dp"
            android:textColor="@color/colorAccent"
            android:text="@string/new_attach_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_gravity="center"
                android:layout_width="@dimen/space200dp"
                android:textColor="#000"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/space20dp"
                android:layout_height="@dimen/space50dp"
                android:text="@string/new_choose"
                android:id="@+id/chooseFile"/>
        </LinearLayout>
        <ImageView
            android:contentDescription="@string/preview"
            android:id="@+id/img_preview"
            android:layout_marginTop="@dimen/space30dp"
            android:layout_gravity="center"
            android:background="#333"
            android:layout_width="@dimen/space225dp"
            android:layout_height="@dimen/space250dp" />
        <Button
            android:layout_width="@dimen/space200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space20dp"
            android:background="#000"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:text="@string/new_mine_button"
            android:id="@+id/mineBlock" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>