<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blockCardWrapper"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space300dp"
        android:id="@+id/reviewItemCardWrap"
        card_view:contentPadding="@dimen/space5dp"
        card_view:cardElevation="@dimen/space5dp"
        card_view:cardCornerRadius="@dimen/space5dp"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/bc_index" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#fff"
                android:id="@+id/blockIndex"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space5dp"
                android:textSize="@dimen/size18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/bc_time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text=""
            android:id="@+id/blockTimestamp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space5dp"
                android:textSize="@dimen/size18sp"
                android:textColor="@color/colorAccent"
                android:text="@string/bc_hash"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text=""
                android:id="@+id/blockHash"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space5dp"
            android:textSize="@dimen/size18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/bc_message"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bc_load"
            android:textColor="#fff"
            android:id="@+id/blockData"/>

            <ImageView
                android:id="@+id/attachmentIcon"
                android:contentDescription="@string/bc_content_desc"
                android:layout_width="@dimen/space50dp"
                android:layout_height="0dp"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:elevation="@dimen/space3dp"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_action_name"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>