<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/space16dp"
    android:background="#333"
    >
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardElevation="@dimen/space3dp"
        app:cardCornerRadius="@dimen/space30dp">
        <ImageView
            android:layout_width="@dimen/space100dp"
            android:layout_height="@dimen/space100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/blockchain_logo"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space200dp"
        card_view:contentPadding="@dimen/space20dp"
        card_view:cardElevation="@dimen/space5dp"
        card_view:cardCornerRadius="@dimen/space5dp"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardUseCompatPadding="true">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/space20dp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorAccent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/space10dp"
            android:textColor="@color/colorAccent"
            android:hint="@string/reg_email_hint"
            android:id="@+id/regEmail" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space80dp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorAccent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/space50dp"
            android:id="@+id/regPW"
            android:hint="@string/reg_pw_hint" />
    </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:text="@string/reg_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50dp"
        android:layout_marginTop="@dimen/space50dp"
        android:textColor="#000"
        android:id="@+id/regButton"
        android:layout_marginBottom="@dimen/space10dp"
        android:background="@color/colorAccent"/>
    <Button
        android:text="@string/reg_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50dp"
        android:textAllCaps="false"
        android:id="@+id/regLoginButton"
        android:background="#000"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="@dimen/space10dp"
        />
    <Button
        android:text="@string/reg_forgot_pw"
        android:layout_width="@dimen/space200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/regForgotPWButton"
        android:background="@null"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="@dimen/space10dp"
        />
</LinearLayout>