<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/space16dp"
    android:background="#333">
<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/space3dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="@dimen/space50dp">
    <ImageView
        android:layout_width="@dimen/space100dp"
        android:layout_height="@dimen/space100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/blockchain_logo"/>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space150dp"
        card_view:contentPadding="@dimen/space20dp"
        card_view:cardElevation="@dimen/space5dp"
        card_view:cardCornerRadius="@dimen/space5dp"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardUseCompatPadding="true">
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/space20dp"
        android:textColor="@color/colorAccent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/space10dp"
            android:textColor="@color/colorAccent"
            android:hint="@string/new_password_hint"
            android:id="@+id/forgotPWEmail" />
    </android.support.design.widget.TextInputLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:text="@string/new_password_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50dp"
        android:layout_marginBottom="@dimen/space100dp"
        android:textColor="#000"
        android:id="@+id/forgotButton"
        android:background="@color/colorAccent"/>

    <Button
        android:text="@string/b2login"
        android:layout_width="@dimen/space200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/fb_back2login_button"
        android:background="@null"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="@dimen/space10dp" />
</LinearLayout>