<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:padding="@dimen/space16dp"
    android:orientation="vertical"
    tools:context=".activities.BlockActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50dp"
        android:id="@+id/appBarMain"
        android:elevation="@dimen/space4dp"
        android:layout_marginTop="@dimen/space0dp"
        android:layout_marginBottom="@dimen/space0dp"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#000"
            android:elevation="@dimen/space4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/size20sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:padding="@dimen/space10dp"
            android:text="@string/block_activity_header"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/space4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space15dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="@dimen/space3dp"
                app:cardCornerRadius="@dimen/space4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/size18sp"
                        android:textColor="#fff"
                        android:text="@string/block_index"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text=""
                        android:id="@+id/block_details_index"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space5dp"
                        android:textColor="#fff"
                        android:textSize="@dimen/size18sp"
                        android:text="@string/block_time"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text=""
                        android:id="@+id/block_details_timestamp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space5dp"
                        android:textColor="#fff"
                        android:textSize="@dimen/size18sp"
                        android:text="@string/block_hash"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text=""
                        android:id="@+id/block_details_hash"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_marginTop="@dimen/space5dp"
                        android:textSize="@dimen/size18sp"
                        android:text="@string/block_prev"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text=""
                        android:id="@+id/block_details_prev_hash"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space5dp"
                        android:textColor="#fff"
                        android:textSize="@dimen/size18sp"
                        android:text="@string/block_data"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text=""
                        android:id="@+id/block_details_data"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space10dp"
    app:cardBackgroundColor="@color/cardview_dark_background"
    app:cardElevation="@dimen/space3dp"
    app:cardCornerRadius="@dimen/space4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space5dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="@dimen/size18sp"
            android:text="@string/block_attach"/>

        <ImageView
            android:contentDescription="@string/preview"
            android:id="@+id/blockFile"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/space10dp"
            android:layout_width="@dimen/space150dp"
            android:layout_height="@dimen/space150dp" />
    </LinearLayout>
</android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>